src/main/k8s/k8s-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test
  namespace: k8s-test
  labels:
    app: k8s-test
    service: k8s-test
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: k8s-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-v1
  namespace: k8s-test
  labels:
    app: k8s-test
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-test
      version: v1
  template:
    metadata:
      labels:
        app: k8s-test
        version: v1
    spec:
      serviceAccountName: k8s-test
      containers:
        - name: k8s-test
          image: luvfist/k8s-test:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
