src/main/k8s/k8s-test-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-test-gateway
  namespace: k8s-test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "luvfist.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-test
  namespace: k8s-test
spec:
  hosts:
    - "luvfist.com"
  gateways:
    - k8s-test-gateway
  http:
    - match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: k8s-test
            port:
              number: 8080
